--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <div class="aboutMeBox text-center w-75 m-auto">
                       <p class="mb-4">Hello ! I'am Muthamizharasi from Pollachi,I'am Looking for software development engineer,I have a good knowledge in Full stack web development, 
                         I'm proficient with technology such as HTML, CSS, Bootstrap, JavaScript , ReactJs , SQL , NodeJs.</p>
-                      <button class="linkBtn"><a href="" class="text-decoration-none" title="LinkedIn Profile">LinkedIn</a></button>
+                      <button class="linkBtn"><a href="https://www.linkedin.com/in/muthamizharasi-t-ba7231299/" class="text-decoration-none" title="LinkedIn Profile">LinkedIn</a></button>
                   </div>
               </div>
           </div>
