--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="aboutMe" id="aboutMe">
       <div class="container">
           <h2 class="text-center mb-4">About Me</h2>
-          <div class="row">
+          <div class="row" id="aboutMeRow">
               <div class="col-sm-12">
                   <div class="aboutMeBox text-center w-75 m-auto">
                       <p class="mb-4">Hello ! I'am Muthamizharasi from Pollachi,I'am Looking for software development engineer,I have a good knowledge in Full stack web development, 
@@ -51,7 +51,7 @@
     <section class="education" id="education">
         <div class="container">
             <h2 class="text-center mb-4">Education</h2>
-            <div class="row">
+            <div class="row" id="educationRow">
                 <div class="col-sm-6 col-lg-3 mb-4 mb-lg-0">
                     <div class="eduBox text-center shadow">
                         <h3 class="mb-3">PG - MBA</h3>
