--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <div class="aboutMeBox text-center w-75 m-auto">
                       <p class="mb-4">Hello ! I'am Muthamizharasi from Pollachi,I'am Looking for software development engineer,I have a good knowledge in Full stack web development, 
                         I'm proficient with technology such as HTML, CSS, Bootstrap, JavaScript , ReactJs , SQL , NodeJs.</p>
-                      <button class="linkBtn"><a href="https://www.linkedin.com/in/muthamizharasi-t-ba7231299/" class="text-decoration-none" title="LinkedIn Profile">LinkedIn</a></button>
+                      <button class="linkBtn"><a href="https://www.linkedin.com/in/muthamizharasi-t-ba7231299/" target="_blank" class="text-decoration-none" title="LinkedIn Profile">LinkedIn</a></button>
                   </div>
               </div>
           </div>
@@ -56,7 +56,7 @@
                     <div class="eduBox text-center shadow">
                         <h3 class="mb-3">PG - MBA</h3>
                         <p class="percentage mb-2">70%</p>
-                        <p class="mb-2">Bharathiyar University</p>
+                        <p class="mb-2">Bharathiyar University,Coimbatore</p>
                         <p>2021-23</p>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                   <div class="eduBox text-center shadow">
                       <h3 class="mb-3">UG - BSC</h3>
                       <p class="percentage mb-2">76%</p>
-                      <p class="mb-2">Nallamuthu Gounder</p>
+                      <p class="mb-2">Nallamuthu Gounder Mahalingam College</p>
                       <p>2018-21</p>
                   </div>
               </div>
