--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <section>
       <nav class="navbar  fixed-top  navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#banner">MT</a>
+          <a class="navbar-brand" href="#banner" title="Muthamizharasi T">MT</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse text-center" id="navbarNavAltMarkup">
             <div class="navbar-nav m-auto">
-              <a class="nav-link" href="#aboutMe">About</a>
-              <a class="nav-link" href="#education">Education</a>
-              <a class="nav-link" href="#certificate">Certificate</a>
-              <a class="nav-link" href="#skills">Skills</a>
-              <a class="nav-link" href="#tools">Tools</a>
+              <a class="nav-link" href="#aboutMe" title="About">About</a>
+              <a class="nav-link" href="#education" title="Education">Education</a>
+              <a class="nav-link" href="#certificate" title="Certificate">Certificate</a>
+              <a class="nav-link" href="#skills" title="Skills">Skills</a>
+              <a class="nav-link" href="#tools" title="Tools">Tools</a>
+              <a class="nav-link" href="#contact" title="Contact">Contact</a>
             </div>
           </div>
         </div>
@@ -56,7 +57,7 @@
                     <div class="eduBox text-center shadow">
                         <h3 class="mb-3">PG - MBA</h3>
                         <p class="percentage mb-2">70%</p>
-                        <p class="mb-2">Bharathiyar University,Coimbatore</p>
+                        <p class="mb-2">Bharathiyar University</p>
                         <p>2021-23</p>
                     </div>
                 </div>
@@ -64,7 +65,7 @@
                   <div class="eduBox text-center shadow">
                       <h3 class="mb-3">UG - BSC</h3>
                       <p class="percentage mb-2">76%</p>
-                      <p class="mb-2">Nallamuthu Gounder Mahalingam College</p>
+                      <p class="mb-2">Nallamuthu Gounder Mahalingam</p>
                       <p>2018-21</p>
                   </div>
               </div>
@@ -91,16 +92,16 @@
       <div class="container">
           <h2 class="text-center mb-4">Certificate</h2>
           <div class="row align-items-center">
-              <div class="col-md-6 mb-4 mb-md-0">
-                  <div class="certificateBox text-center">
-                      <img src="assets/images/javascript.png" alt="Javascript" class="img-fluid" />
-                  </div>
+              <div class="col-md-6 mb-3 mb-md-0">
+                <div class="certificateBox text-center">
+                  <img src="assets/images/fullStackwebdevelopment.png" alt="Data Analytics" class="img-fluid w-75 m-auto" />
+                </div>
               </div>
               <div class="col-md-6">
-                <div class="certificateBox text-center">
-                    <img src="assets/images/dataAnalytics.jpeg" alt="Data Analytics" class="img-fluid" />
-                </div>
-            </div>
+                  <div class="certificateBox text-center">
+                      <img src="assets/images/javascript.png" alt="Javascript" class="img-fluid  w-75 m-auto" />
+                  </div>
+              </div>
           </div>
       </div>
     </section>
@@ -169,9 +170,9 @@
       </div>
     </section>
 
-    <section class="contact" id="tools">
+    <section class="contact" id="contact">
       <div class="container">
-          <h2 class="text-center mb-4">Contact Us</h2>
+          <h2 class="text-center mb-5">Contact Us</h2>
           <div class="row align-items-center">
             <div class="offset-md-1 col-md-5">
               <div class="conBox d-flex mb-3">
@@ -203,16 +204,19 @@
                   <img src="assets/images/linkedin.png" alt="LinkedIn" class="img-fluid" />
                 </div>
                 <div class="ConDes">
-                  <p>Muthamizharasi T</p>
+                  <a class="text-decoration-none" href="https://www.linkedin.com/in/muthamizharasi-t-ba7231299/" title="LinkedIn">
+                  <p>Muthamizharasi T</p></a>
                 </div>
               </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 mt-4 mt-md-0">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7841.6584430067205!2d77.01231468693277!3d10.670360492764619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba83784b8b2db07%3A0xd1bd2ac29988e172!2sT%20.%20Kottampatty%2C%20Vjayapuram%2C%20Pollachi%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1718523297236!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
       </div>
     </section>
     <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/animation.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
