--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <a class="nav-link" href="#education" title="Education">Education</a>
               <a class="nav-link" href="#certificate" title="Certificate">Certificate</a>
               <a class="nav-link" href="#skills" title="Skills">Skills</a>
-              <a class="nav-link" href="#tools" title="Tools">Tools</a>
+              <a class="nav-link" href="#project" title="Tools">Project</a>
               <a class="nav-link" href="#contact" title="Contact">Contact</a>
             </div>
           </div>
@@ -142,32 +142,35 @@
           </div>
       </div>
     </section>
-    <section class="tools" id="tools">
+    <section class="project" id="project">
       <div class="container">
-          <h2 class="text-center mb-4">Tools</h2>
-          <div class="row align-items-center">
-            <div class="col-4 offset-sm-2 col-sm-2">
-                <div class="toolBox text-center">
-                    <img src="assets/images/tool1.png" alt="Visual Studio Code" class="tool1 img-fluid" />
+        <h2 class="text-center mb-4">Project - Blog Platform</h2>
+        <div class="row" id="projectRow">
+            <div class="col-md-6">
+                <div class="aboutMeBox">
+                    <p class="mb-4">Developed a comprehensive blog platform website to facilitate content
+                      creation, management, and user engagement.</p>
+                      <h4>Technologies Used:</h4>
+                      <ul>
+                        <li>HTML, CSS, Bootstrap5, React.js, Node.js,
+                          MongoDB.</li>
+                      </ul>
                 </div>
             </div>
-            <div class="col-4 col-sm-2 mb-4 mb-sm-0">
-              <div class="toolBox text-center">
-                  <img src="assets/images/tool2.png" alt="Sublime" class="tool2 img-fluid" />
+            <div class="col-md-6">
+              <div class="aboutMeBox">
+                  <h4>Key Responsibilities:</h4>
+                  <ul>
+                    <li><b>Full-Stack Development :</b> Designed and implemented the website
+                      using HTML, CSS, React.js and a backend framework Node.js.</li>
+                    <li><b>User Experience (UX) Design :</b> Focused on creating an intuitive and
+                      responsive user interface to ensure a seamless user experience
+                      across devices.</li>
+                  </ul>
               </div>
-            </div>
-            <div class="col-4 col-sm-2 mb-4 mb-sm-0">
-              <div class="toolBox text-center">
-                  <img src="assets/images/tool3.svg" alt="Word" class="tool3 img-fluid" />
-              </div>
-            </div>
-            <div class="col-4 offset-4 offset-sm-0 col-sm-2 mb-4">
-              <div class="toolBox text-center">
-                  <img src="assets/images/tool4.png" alt="Notepad++" class="tool3 img-fluid" />
-              </div>
-            </div>
           </div>
-      </div>
+        </div>
+    </div>
     </section>
 
     <section class="contact" id="contact">
