--- a/index.html
+++ b/index.html
@@ -144,29 +144,28 @@
     </section>
     <section class="project" id="project">
       <div class="container">
-        <h2 class="text-center mb-4">Project - Blog Platform</h2>
+        <h2 class="text-center mb-4">Project</h2>
         <div class="row" id="projectRow">
-            <div class="col-md-6">
-                <div class="aboutMeBox">
-                    <p class="mb-4">Developed a comprehensive blog platform website to facilitate content
+            <div class="col-md-6"> 
+                <div class="projectBox">
+                    <h3>Blog Platform</h3>
+                    <p class="mb-3">Developed a comprehensive blog platform website to facilitate content
                       creation, management, and user engagement.</p>
-                      <h4>Technologies Used:</h4>
-                      <ul>
-                        <li>HTML, CSS, Bootstrap5, React.js, Node.js,
-                          MongoDB.</li>
-                      </ul>
+                      <div class="projectBtn">
+                        <a href="https://github.com/Muthamizh23/blogplatform-frontend" target="_blank" title="Source Code">Git</a>
+                        <a href="" target="_blank" title="Deployed URL">Site</a>
+                      </div>
                 </div>
             </div>
-            <div class="col-md-6">
-              <div class="aboutMeBox">
-                  <h4>Key Responsibilities:</h4>
-                  <ul>
-                    <li><b>Full-Stack Development :</b> Designed and implemented the website
-                      using HTML, CSS, React.js and a backend framework Node.js.</li>
-                    <li><b>User Experience (UX) Design :</b> Focused on creating an intuitive and
-                      responsive user interface to ensure a seamless user experience
-                      across devices.</li>
-                  </ul>
+            <div class="col-md-6"> 
+              <div class="projectBox">
+                  <h3>Ticket Booking</h3>
+                  <p class="mb-3">Developed a comprehensive ticket booking application for theaters with set of 
+                    multiple movies in one selection.</p>
+                    <div class="projectBtn">
+                      <a href="https://github.com/Muthamizh23/ticket-booking" target="_blank" title="Source Code">Git</a>
+                      <a href="" target="_blank" title="Deployed URL">Site</a>
+                    </div>
               </div>
           </div>
         </div>
