--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
       <div class="container">
         <h2 class="text-center mb-4">Project</h2>
         <div class="row" id="projectRow">
-            <div class="col-md-6 mb-3"> 
-                <div class="projectBox">
+            <div class="col-md-6 mb-4"> 
+                <div class="projectBox shadow">
                     <h3>Blog Platform</h3>
                     <p class="mb-3">The Blog Platform is a dynamic web application designed to enable users to create, manage, and share blog posts with a global audience. This platform aims to provide an intuitive and feature-rich environment for bloggers to express their ideas, build a community.</p>
                       <div class="projectBtn">
@@ -156,8 +156,8 @@
                       </div>
                 </div>
             </div>
-            <div class="col-md-6 mb-3"> 
-              <div class="projectBox">
+            <div class="col-md-6 mb-4"> 
+              <div class="projectBox shadow">
                   <h3>Ticket Booking</h3>
                   <p class="mb-3">The Ticket Booking System is a sophisticated web application designed to facilitate the booking of tickets for various events such as movies. This system aims to provide a seamless and user-friendly experience for customers, allowing them to search for events, book tickets.</p>
                     <div class="projectBtn">
@@ -166,8 +166,8 @@
                     </div>
               </div>
           </div>
-            <div class="col-md-6 mb-3 mb-md-0"> 
-              <div class="projectBox">
+            <div class="col-md-6 mb-4 mb-md-0"> 
+              <div class="projectBox shadow">
                   <h3>Library Management</h3>
                   <p class="mb-3">The Library Management System is a software application designed to automate and streamline the management of library operations. The system aims to facilitate efficient handling of book inventories, user accounts, transactions, and other library-related activities. By providing a centralized platform for managing library resources.
                   </p>
@@ -177,7 +177,7 @@
                     </div>
               </div>
           </div>
-          <div class="col-md-6"> 
+          <div class="col-md-6 shadow"> 
             <div class="projectBox">
                 <h3>Mentor system</h3>
                 <p class="mb-3">The Student-Mentor Management System is a comprehensive platform designed to streamline the mentorship process in educational institutions. This project aims to enhance the mentorship experience by providing tools for efficient mentor-student matching, tracking progress, scheduling meetings, and facilitating communication.
