--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                     </div>
               </div>
           </div>
-          <div class="col-md-6 shadow"> 
-            <div class="projectBox">
+          <div class="col-md-6"> 
+            <div class="projectBox shadow">
                 <h3>Mentor system</h3>
                 <p class="mb-3">The Student-Mentor Management System is a comprehensive platform designed to streamline the mentorship process in educational institutions. This project aims to enhance the mentorship experience by providing tools for efficient mentor-student matching, tracking progress, scheduling meetings, and facilitating communication.
                 </p>
